--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,7 +3,7 @@
 } */
 
 .main {
-  padding-bottom: 4rem;
+  padding-bottom: 2rem;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -128,6 +128,10 @@
 .logo {
   height: 1em;
   margin-left: 0.5rem;
+}
+
+.inverted { 
+  filter: invert(100%);
 }
 
 .self_description {
