--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -153,6 +153,7 @@
 .contact_page {
   padding-left: 2rem;
   padding-right: 2rem;
+  padding-bottom: 2rem;
   flex: 1;
   display: flex;
   flex-direction: column;
